src/stylesheet/CommonPage.module.css
.container {
  background-color: #f3f4f6;
  min-height: calc(100vh - 116px);
}

.removeWhiteSpaceOnTop {
  height: 1px;
  margin-bottom: -1px;
}

.fullHeight {
  height: 100vh;
}

.extrasSpaceBottom {
  padding-bottom: 100px;
}

.pageBottomPadding {
  padding-bottom: 145px;
}

.zeroHeight {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 0;
}

.overflowY {
  overflow-y: scroll;
}

.whiteBackground {
  background-color: white;
}

